--- a/.html
+++ b/.html
@@ -70,9 +70,9 @@ git push -u origin master<br/></p>
 </blockquote>
 </li>
 <li>修改publish:<blockquote>
-<p><code>$(PELICAN) $(INPUTDIR) -o $(OUTPUTDIR) -s $(PUBLISHCONF) $(PELICANOPTS)</code>
-为: 
-  <code>$(PELICAN) $(INPUTDIR) -o $(OUTPUTDIR) -s $(CONFFILE) $(PELICANOPTS)</code></p>
+<p><code>$(PELICAN) $(INPUTDIR) -o $(OUTPUTDIR) -s $(PUBLISHCONF) $(PELICANOPTS)</code> <br/>
+为: <br/>
+  <code>$(PELICAN) $(INPUTDIR) -o $(OUTPUTDIR) -s $(CONFFILE) $(PELICANOPTS)</code> <br/></p>
 </blockquote>
 </li>
 </ul>
