--- a/.html
+++ b/.html
@@ -80,6 +80,13 @@ git push -u origin master<br/></p>
 <blockquote>
 <p><code>make github</code></p>
 </blockquote>
+<h3>保存git密码:</h3>
+<p>修改.git/config文件添加</p>
+<blockquote>
+<p>[credential]
+    helper = store
+输入一次密码后会保存</p>
+</blockquote>
     </div><!-- /.entry-content -->
 
   </article>
