--- a/archives.html
+++ b/archives.html
@@ -14,7 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">从心出发 </a></h1>
                 <nav><ul>
-                    <li><a href="/category/ri-chang-su-ji.html">日常速记</a></li>
+                    <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -22,7 +22,9 @@
 
 <dl>
     <dt>周一 01 一月 2018</dt>
-    <dd><a href="/.html"></a></dd>
+    <dd><a href="/kafka-windows-dan-li-ce-shi.html">kafka windows 单例测试</a></dd>
+    <dt>周一 01 一月 2018</dt>
+    <dd><a href="/shi-yong-pelicanfa-bu-bo-ke-liu-cheng.html">使用pelican发布博客流程</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
