--- a/authors.html
+++ b/authors.html
@@ -14,14 +14,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">从心出发 </a></h1>
                 <nav><ul>
-                    <li><a href="/category/ri-chang-su-ji.html">日常速记</a></li>
+                    <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on 从心出发</h1>
     <ul>
-        <li><a href="/author/hank.html">hank</a> (1)</li>
+        <li><a href="/author/hank.html">hank</a> (2)</li>
     </ul>
 </section>
 
