--- a/categories.html
+++ b/categories.html
@@ -14,11 +14,11 @@
         <header id="banner" class="body">
                 <h1><a href="/">从心出发 </a></h1>
                 <nav><ul>
-                    <li><a href="/category/ri-chang-su-ji.html">日常速记</a></li>
+                    <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="/category/ri-chang-su-ji.html">日常速记</a></li>
+    <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
 </ul>
         <section id="extras" class="body">
         </section><!-- /#extras -->
