--- a/authors.html
+++ b/authors.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">从心出发 </a></h1>
                 <nav><ul>
+                    <li><a href="/category/about.html">about</a></li>
                     <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,7 +22,7 @@
 <section id="content" class="body">
     <h1>Authors on 从心出发</h1>
     <ul>
-        <li><a href="/author/hank.html">hank</a> (2)</li>
+        <li><a href="/author/hank.html">hank</a> (3)</li>
     </ul>
 </section>
 
