--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">从心出发 </a></h1>
                 <nav><ul>
+                    <li><a href="/category/about.html">about</a></li>
                     <li><a href="/category/ji-zhu-sui-bi.html">技术随笔</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -22,6 +23,7 @@
     <h1>Tags for 从心出发</h1>
     <ul>
         <li><a href="/tag/kafka.html">kafka</a> (1)</li>
+        <li><a href="/tag/me.html">me</a> (1)</li>
     </ul>
 </section>
 
